--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -3,6 +3,9 @@
 {% block content %}
     <h2>Blog Posts</h2>
     {% for post in posts %}
+    {% if post.hero_image %}
+        <img src="{{ post.hero_image.thumbnail.100x100.url }}"/>
+    {% endif %}
     {% row "border-bottom" %}
         {% col %}
             <h3>{{ post.title }}</h3>
